--- a/flaskblog/templates/create_post.html
+++ b/flaskblog/templates/create_post.html
@@ -5,7 +5,7 @@
         <!--  adding a csrf token , part of protection -->
         {{ form.hidden_tag() }}
         <fieldset class="form-group">
-            <legend class="border-bottom mb4"> New Post </legend>
+            <legend class="border-bottom mb4"> {{ legend }} </legend>
 
             <div class="form-group">
                 <!-- access using variable names as per the class -->
